Sigil v0.4.0 ß4 2011.04.21
    - made the CSS resource path updates faster and more robust
    - updated FlightCrew so that CSS resource use is now far more robustly detected (issue #822)
    - fixed a rare hang when opening the Meta Editor on Win XP machines
    - a more accurate error message is now displayed for problems with file loading/saving
    (issue #772)
    - fixed an issue with incorrect font filepath updates in the CSS (issue #736)
    - fixed an issue with paths in the OPF not being URL-encoded (issue #823) 

Sigil v0.4.0 ß3 2011.03.24
    - added a workaround for loading broken epub files that use the incorrect mimetype for the 
    NCX (issue #815)
    - fixed a rare issue with loading epub files with OPF's that had the XML version set to 1.1,
    but also had other attributes in the XML declaration (issue #812)
    - fixed an issue with entries appearing at random in the TOC after a split on SGF markers
    is followed up with "Generate TOC from headings" request (issue #804)
    - fixed an issue with files not appearing in the Book Browser after a split on SGF markers
    (issue #816)
    - fixed a regression that caused the auto-cover-setting heuristics to unset covers when they
    are already set (issue #806)
    - opening an HTML file now automatically builds a TOC from the headings
    - fixed a regression that caused the Add Semantics menu to stop working (issue #807)

Sigil v0.4.0 ß2 2011.03.21.
    - fixed an issue with the ID of the manifest item of a resource not being updated when the 
    resource was renamed
    - fixed an issue with chapter splits being created in the wrong reading order (issue #797)
    - fixed an issue with some HTML files disappearing after a save/load cycle if chapter splitting
    was performed before the save
    - fixed an issue with renaming a file and then splitting it causing duplicate ID's in the OPF
    manifest (issue #800)