@@ -1,4 +1,5 @@
 Sigil v0.4.0 ß4 2011.04.21
+    - fixed a rare crash/memory corruption issue with automatic OPF updates
     - made the CSS resource path updates faster and more robust
     - updated FlightCrew so that CSS resource use is now far more robustly detected (issue #822)
     - fixed a rare hang when opening the Meta Editor on Win XP machines
